<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFEFE8"
    tools:context=".BMIResult">

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="80sp"
        android:background="@drawable/bmilogo">
    </ImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="125dp"
        android:text="BMI"
        android:textSize="31sp"
        android:textColor="#0A5E2A"
        android:fontFamily="@font/opensans_bold">
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="187dp"
        android:text="Calculator"
        android:textSize="30sp"
        android:textColor="#0A5E2A"
        android:fontFamily="@font/opensans_regular">
    </TextView>


    <RelativeLayout
        android:layout_width="400dp"
        android:layout_height="740dp"
        android:layout_marginTop="68dp"
        android:background="#44CB17"
        android:id="@+id/result_layout">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="RESULT"
            android:textSize="35sp"
            android:textColor="#000000"
            android:fontFamily="@font/opensans_bold"
            android:id="@+id/result_text0">
        </TextView>


        <ImageView
            android:layout_width="150dp"
            android:layout_height="250dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/result_text0"
            android:padding="15dp"
            android:src="@drawable/body"
            android:id="@+id/result_image">
        </ImageView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/result_image"
            android:layout_marginTop="15dp"
            android:textSize="40sp"
            android:textColor="#000000"
            android:fontFamily="@font/opensans_bold"
            android:id="@+id/result_text1">
        </TextView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/result_text1"
            android:layout_marginTop="20dp"
            android:text="@string/result_text2"
            android:textSize="80sp"
            android:textColor="#000000"
            android:fontFamily="@font/opensans_bold"
            android:id="@+id/result_text2">
        </TextView>

    </RelativeLayout>

    <android.widget.Button
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-670dp"
        android:layout_above="@id/layout_goback"
        android:background="@drawable/recalculate_layout"
        android:text="@string/recalculate_bmi"
        android:textSize="20sp"
        android:textColor="#000000"
        android:fontFamily="@font/opensans_bold"
        android:id="@+id/layout_recalculate">
    </android.widget.Button>

    <android.widget.Button
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="675dp"
        android:background="@drawable/recalculate_layout"
        android:text="@string/go_back"
        android:textSize="20sp"
        android:textColor="#000000"
        android:fontFamily="@font/opensans_bold"
        android:id="@+id/layout_goback">
    </android.widget.Button>


</RelativeLayout>